Adding a new path to fonts commit

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         @font-face {
             font-family: 'Lighthaus';
             /* Укажите правильные пути к вашим файлам шрифтов */
-            src: url('path/to/your/fonts/lighthaus.eot'); /* IE 9 Compatibility Mode */
-            src: url('path/to/your/fonts/lighthaus.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
-                 url('path/to/your/fonts/lighthaus.woff2') format('woff2'), /* Super Modern Browsers */
-                 url('path/to/your/fonts/lighthaus.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
-                 url('path/to/your/fonts/lighthaus.ttf') format('truetype'), /* Safari, Android, iOS */
-                 url('path/to/your/fonts/lighthaus.svg#lighthaus') format('svg'); /* Chrome < 4, Legacy iOS */
+            src: url('fonts/lighthaus.woff'); /* IE 9 Compatibility Mode */
+            src: url('fonts/lighthaus.css') format('embedded-opentype'), /* IE < 9 */
+                 url('fonts/lighthaus.woff2') format('woff2'), /* Super Modern Browsers */
+                 url('fonts/lighthaus.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+                 url('fonts/lighthaus.ttf') format('truetype'), /* Safari, Android, iOS */
+                 url('fonts/lighthaus.svg') format('svg'); /* Chrome < 4, Legacy iOS */
         }
 
         /* --- Общие стили и сброс --- */
