--- a/index.html
+++ b/index.html
@@ -183,11 +183,13 @@
     top: 120px;
     left: 120px;
     z-index: 10;
+    max-width: 700px;      /* ограничим ширину, чтобы текст не растягивался */
+    width: calc(100% - 10%);
 }
 
 .home-title {
     font-family: 'Lighthaus', sans-serif;
-    font-size: 128px;
+    font-size: clamp(32px, 8.5vw, 128px); /* min 32, preferred 8.5vw, max 128 */
     color: #5B3019;
     text-transform: uppercase;
     font-weight: normal;
@@ -198,7 +200,7 @@
 
 .home-subtitle {
     font-family: 'Poppins', sans-serif;
-    font-size: 36px;
+     font-size: clamp(18px, 3.5vw, 36px);
     color: #FFFCF0;
     line-height: 1.4;
     margin-top: 40px;
