--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHOKOLADNO - Студия авторского шоколада</title>
+        <title>SHOKOLADNO - Студия авторского шоколада</title>
+    <!-- Добавьте эту строку ниже -->
+    <meta name="description" content="SHOKOLADNO - студия авторского шоколада ручной работы в Самаре. Натуральный шоколад без сахара и консервантов. Закажите плитки, трюфели и конфеты онлайн.">
     <style>
         /* --- Подключение шрифтов --- */
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
@@ -313,6 +315,28 @@
             font-size: 18px;
         }
 
+                .about-features {
+            list-style: none;
+            margin-top: 25px;
+        }
+
+        .about-features li {
+            position: relative;
+            padding-left: 30px;
+            margin-bottom: 15px;
+            line-height: 1.6;
+            font-size: 18px;
+        }
+
+        .about-features li::before {
+            content: '✓';
+            position: absolute;
+            left: 0;
+            color: var(--secondary-color);
+            font-weight: bold;
+            font-size: 20px;
+        }
+        
         /* --- 4. Футер --- */
         .main-footer {
             padding: 80px 0;
@@ -404,7 +428,58 @@
              height: 24px;
              margin-right: 10px;
          }
+        /* Стили для формы подписки в футере */
+        .footer-newsletter-text {
+            font-size: 16px;
+            line-height: 1.6;
+            max-width: 350px;
+            margin-bottom: 20px;
+        }
 
+        .newsletter-form {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            max-width: 350px;
+        }
+
+        .newsletter-input {
+            padding: 15px 20px;
+            border: 1px solid var(--accent-color);
+            border-radius: 30px;
+            background: transparent;
+            color: var(--text-light);
+            font-family: 'Poppins', sans-serif;
+            font-size: 16px;
+        }
+
+        .newsletter-input::placeholder {
+            color: var(--accent-color);
+            opacity: 0.8;
+        }
+
+        .newsletter-input:focus {
+            outline: none;
+            border-color: #FFFCF0;
+        }
+
+        .newsletter-btn {
+            width: 100%;
+            padding: 15px 20px;
+            border-radius: 30px;
+            font-size: 16px;
+            font-weight: 500;
+            background-color: var(--accent-color);
+            color: var(--primary-color);
+            border: none;
+            cursor: pointer;
+            transition: all 0.4s ease;
+        }
+
+        .newsletter-btn:hover {
+            background-color: #FFFCF0;
+            transform: scale(1.02);
+        }
 
         /* --- Адаптивность --- */
         @media (max-width: 1024px) {
@@ -544,9 +619,16 @@
                 </div>
                 <div class="about-text">
                     <h2>О Нас</h2>
-                    <p>
-                        Наш шоколад не содержит белого сахара, консервантов и усилителей вкуса. Мы не переплавляем готовый шоколад. Мы делаем его сами. Из какао-продуктов с лучших плантаций Перу, Эквадора, Венесуэлы. Наш шоколад не создаётся - он рождается. Ведь только чистое творчество, основанное на понимание процессов, поможет ощутить неповторимый вкус вашей мечты!
+                                        <p>
+                        Наш шоколад не создаётся — он рождается. Ведь только чистое творчество, основанное на понимании процессов, поможет ощутить неповторимый вкус вашей мечты!
                     </p>
+
+                    <ul class="about-features">
+                        <li>Не содержит белого сахара, консервантов и усилителей вкуса</li>
+                        <li>Мы не переплавляем готовый шоколад, мы делаем его сами от боба до плитки</li>
+                        <li>Используем какао-продукты с лучших плантаций Перу, Эквадора и Венесуэлы</li>
+                        <li>Авторские рецепты и ручная работа</li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -569,9 +651,13 @@
                         <svg viewBox="0 0 448 512"><path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 221.9-99.6 221.9-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.8 0-67.6-9.5-97.8-26.7l-7-4.1-72.5 19 19.3-71.1-4.5-7.4c-18.3-30.7-27.9-65.4-27.9-101.3 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/></svg>
                     </a>
                 </div>
-                <p>
-                    Узнавайте первыми все наши новости. Крутые скидки, акции, новинки, — всё у вас на почте с помощью нашей волшебной рассылки!
+                                <p class="footer-newsletter-text">
+                    Узнавайте первыми все наши новости. Крутые скидки, акции, новинки — всё у вас на почте с помощью нашей волшебной рассылки!
                 </p>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Ваш e-mail" required class="newsletter-input">
+                    <button type="submit" class="btn newsletter-btn">Подписаться</button>
+                </form>
             </div>
             <!-- Центральная часть -->
             <div class="footer-col center">
