Update catalog images: replace with new versions and increase size to 160px

--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@
         }
 
         .catalog-item {
-            width: 124px;
+            width: 160px;
         }
 
         .catalog-item-img {
-            width: 124px;
-            height: 124px;
+            width: 160px;
+            height: 160px;
             border-radius: 20%;
             overflow: hidden;
             margin-bottom: 20px;
@@ -753,25 +753,25 @@
                 <div class="catalog-container">
                     <div class="catalog-item">
                         <div class="catalog-item-img">
-                            <img src="img/Catalog_1.png.png" alt="Шоколадные плитки">
+                            <img src="img/Catalog_1.1.png" alt="Шоколадные плитки">
                         </div>
                         <h4>Шоколадные плитки</h4>
                     </div>
                     <div class="catalog-item">
                         <div class="catalog-item-img">
-                            <img src="img/Catalog_2.png.png" alt="Шоколадные трюфели">
+                            <img src="img/Catalog_2.2.png" alt="Шоколадные трюфели">
                         </div>
                         <h4>Шоколадные трюфели</h4>
                     </div>
                     <div class="catalog-item">
                         <div class="catalog-item-img">
-                            <img src="img/Catalog_3.png.png" alt="Корпусные конфеты">
+                            <img src="img/Catalog_3.3.png" alt="Корпусные конфеты">
                         </div>
                         <h4>Корпусные конфеты</h4>
                     </div>
                     <div class="catalog-item">
                         <div class="catalog-item-img">
-                            <img src="img/Catalog_4.png.png" alt="Шоколадные батончики">
+                            <img src="img/Catalog_4.4.png" alt="Шоколадные батончики">
                         </div>
                         <h4>Шоколадные батончики</h4>
                     </div>
