--- a/index.html
+++ b/index.html
@@ -223,14 +223,19 @@
     line-height: 1;
     text-align: left; /* Переопределение общего стиля для h1 */
     margin: 0; /* Переопределение общего стиля для h1 */
+    opacity: 0;
+    animation: fadeIn 1s ease-in forwards;
 }
 
 .home-subtitle {
     font-family: 'Poppins', sans-serif;
      font-size: clamp(18px, 3.5vw, 36px);
-    color: #FFFCF0;
+    color: var(--text-light);
     line-height: 1.4;
     margin-top: 40px;
+    opacity: 0;
+    transform: translateX(-100%);
+    animation: slideInLeft 1s ease-out 2s forwards;
 }
 
         /* --- 2. Страница каталога --- */
@@ -485,6 +490,11 @@
             from { opacity: 0; }
             to { opacity: 1; }
         }
+
+        @keyframes slideInLeft {
+            from { opacity: 0; transform: translateX(-100%); }
+            to { opacity: 1; transform: translateX(0); }
+        }
         
         /* --- 5. Футер --- */
         .main-footer {
@@ -736,7 +746,7 @@
     <main>
         <!-- 1. Главная страница -->
         <section id="home">
-            <div class="home-text-wrapper">
+            <div class="home-text-wrapper parallax" data-rate="-0.3">
                 <h1 class="home-title">SHOKOLADNO</h1>
                 <p class="home-subtitle">Авторская студия<br>натурального шоколада<br>ручной работы</p>
             </div>
@@ -997,6 +1007,17 @@
                 let nextSlide = (currentAboutSlide + 1) % aboutSlides.length;
                 showAboutSlide(nextSlide);
             }, 5000);
+        });
+
+        // Параллакс эффект
+        window.addEventListener('scroll', () => {
+            const scrolled = window.pageYOffset;
+            const parallaxElements = document.querySelectorAll('.parallax');
+
+            parallaxElements.forEach(el => {
+                const rate = parseFloat(el.dataset.rate) || 0.5;
+                el.style.transform = `translateY(${scrolled * rate}px)`;
+            });
         });
     </script>
 
